WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240267
com.apple.WebKit.GPU leaks CMBlockBuffer
https://bugs.webkit.org/show_bug.cgi?id=240267
Summary
com.apple.WebKit.GPU leaks CMBlockBuffer
Jean-Yves Avenard [:jya]
Reported
2022-05-09 21:08:07 PDT
com.apple.WebKit.GPU leaks CMBlockBuffer
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2022-05-09 21:08:53 PDT
rdar://92655222
Jean-Yves Avenard [:jya]
Comment 2
2022-05-09 21:19:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/576
EWS
Comment 3
2022-05-10 00:46:35 PDT
Committed
r294004
(
250440@main
): <
https://commits.webkit.org/250440@main
> Reviewed commits have been landed. Closing PR #576 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug